name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/Mervap/Fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                       Block1.Task2
                       Block1.Task3
                       Block2.Task2
                       Block3.Task1
                       Block3.Task2
                       Block4.Task1
                       Block4.Task2
                       Block5.Task1
                       Block5.Task2
                       Block6.Task1
                       Block6.Task2
                       Tree
                       NonEmpty
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hw1
                     , HUnit
                     , hedgehog
                     , tasty
                     , tasty-hunit
                     , tasty-hedgehog
  ghc-options:         -Wall
  other-modules:       Block1.TestTask1
                       Block1.TestTask2
                       Block1.TestTask3
                       Block2.TestTask1
                       Block2.TestTask2
                       Block3.TestTask1
                       Block3.TestTask2
                       Block4.TestTask1
                       Block4.TestTask2
                       Block4.TestTask3
                       Block5.TestTask1
                       Block5.TestTask2
                       LawsCheckers
                       TestHelpers
  default-language:    Haskell2010
