name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-Mervap#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     VFSExternalOperations
                     , VFSCommand
                     , VersionControlSystem
                     , VFSTypes
                     , Parsers
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , optparse-applicative
                     , directory
                     , containers
                     , time
                     , filepath
                     , bytestring
                     , optparse-applicative
                     , mtl
                     , utf8-string
                     , lens
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , directory
                     , hw2
                     , readline
                     , mtl
                     , bytestring
                     , safe-exceptions
                     , time
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hw2
                     , HUnit
                     , hedgehog
                     , tasty
                     , tasty-hunit
                     , tasty-hedgehog
                     , directory
                     , bytestring
                     , filepath
                     , time
                     , mtl
                     , containers
  ghc-options:         -Wall
  other-modules:       VFSTest
                     , VCSTest
                     , TestHelpers
  default-language:    Haskell2010