name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw3-Mervap#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src, internalSrc
  exposed-modules:     Task1.LazyPoint
                     , Task1.StrictPoint
                     , Task1.Internal
                     , Task2.ConcurrentHashTable
                     , Task3.HalyavaScript
                     , Task4.HalyavaScriptPrinter
                     , Task5.FileSystem
                     , Task5.Practice
                     , Task6.SystemOperations
                     , Task7.AdvancedSystemOperations
                     , Task8.Zipper
                     , Task8.Grid
                     , Task8.Comonad19
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , mtl
                     , microlens
                     , directory
                     , filepath
                     , hashable
                     , comonad
                     , random
                     , ansi-terminal
                     , hashable
                     , containers
                     , stm
                     , stm-containers
  default-language:    Haskell2010

library hw3-test-internal
  hs-source-dirs:      internalSrc
  exposed-modules:     Task2.MapRequest
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.9 && < 5
                     , hw3
                     , hashable
                     , containers
                     , stm
                     , stm-containers
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 5
                     , hw3
                     , HUnit
                     , hedgehog
                     , tasty
                     , tasty-hunit
                     , tasty-hedgehog
                     , directory
                     , filepath
                     , ieee754
                     , microlens
                     , hw3-test-internal
                     , containers
                     , async
  ghc-options:         -Wall -rtsopts -threaded -with-rtsopts=-N -O2
  other-modules:       Task1
                     , Task2
                     , Task3
                     , Task4
                     , Task5
                     , Task6
                     , Task7
  default-language:    Haskell2010

benchmark hw3-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.9 && < 5
                     , criterion
                     , deepseq
                     , hw3
                     , hw3-test-internal
                     , directory
                     , filepath
                     , ansi-terminal
                     , random
                     , async
                     , stm-containers
  other-modules:       BenchInternal
                     , BenchTask1
                     , BenchTask2
  default-language:    Haskell2010

executable Comonad19
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , hw3
                     , optparse-applicative
  default-language:    Haskell2010
