name:                practice2
version:             0.1.0.0
synopsis:            Template for practice 2
description:         Practice 2 for FP ITMO course

homepage:            https://github.com/Mervap/FP-homework/tree/master/practice2#readme
license:             MIT
license-file:        LICENSE
author:              Mervap
maintainer:          megavaprold@gmail.com
copyright:           2019 Mervap

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

executable practice2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
